$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 2.1-13 (opened February 23, 2012)

	* vegdist: Added Cao dissimilarity (CYd).
	
Version 2.1-12 (closed February 23, 2012)

	* scores.default: failed if users asked scores of non-existing
	axes. This was reported as an error in ordiplot() when the user
	tried to plot 2-dim graph of 1-dim solution in
	https://stat.ethz.ch/pipermail/r-sig-ecology/2012-February/002764.html

	* simper: new function to implement "similarity percentages" of
	Clarke (Austral. J. Ecol. 18, 117-143; 1993) contributed by Eduard
	Szöcz (Uni Landau, Germany).

Version 2.1-11 (closed February 9, 2012)

	* indpower: now can handle input objects without dimnames.  This
	caused problems with oecosimu, because nullmodel objects have no
	dimnames to save memory.  Extended example on indpower help page
	shows the p-value and heterogeneity calculations suggested in
	Halme et al. 2009.

	* adonis, anosim, mantel, mantel.partial, mrpp, permutest.cca: do
	not need clusterEvalQ(parallel, library(vegan)) for socket
	clusters. 

	* adonis: added missing 'mc.cores=' for multicore parallel
	processing. 

	* bioenv: implemented parallel processing.

	* metaMDS: implemented parallel processing which runs iterations
	(tries) in batches of 'parallel' iterations. However, it seems
	that this does not work completely with monoMDS: basic results are
	OK, but 'diss' and 'dist' vectors are scrambled (tested in Linux &
	R 2.15.0) which is evident if you try to run stressplot() on the
	result.  The problematic behaviour can also be generated directly
	with monoMDS():

	mods <- mclapply(1:8, function(i) monoMDS(d), mc.cores=2)
	stressplot(mods[[1]])

	The 'diss' and 'dist' seem to contain random rubbish as soon as
	mc.cores > 1.  On the other hand, there are no similar problems
	with isoMDS() -- but it does not directly return 'diss' and
	'dist'.  If this cannot be solved, the parallel processing (r2069)
	will be reverted.
