@@ -18,7 +18,7 @@ monoMDS(dist, y, k = 2, model = c("global", "local", "linear", "hybrid"),
     threshold = 0.8, maxit = 200, weakties = TRUE, stress = 1,
     scaling = TRUE, pc = TRUE, smin = 0.00001, sfgrmin = 0.00001, 
     sratmax=0.99999, ...) 
-\method{scores}{monoMDS}(x, ...)
+\method{scores}{monoMDS}(x, choices = NA, ...)
 \method{plot}{monoMDS}(x, choices = c(1,2), type = "t", ...)
 }
 
@@ -57,7 +57,9 @@ monoMDS(dist, y, k = 2, model = c("global", "local", "linear", "hybrid"),
     \code{sratmax} (but is still \eqn{< 1}).}
 
   \item{x}{A \code{monoMDS} result.}
-  \item{choices}{Dimensions plotted.}
+
+  \item{choices}{Dimensions returned or plotted. The default \code{NA}
+    returns all dimensions. }
 
   \item{type}{The type of the plot: \code{"t"} for text, \code{"p"}
     for points, and \code{"n"} for none.}
